fixed card spacing scss in works component

--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -58,10 +58,9 @@
                 justify-content: center;
 
                 @include mobile {
-                    width: 90%;
-                    height: 180px;
-                    margin: 5px 0;
-
+                    width: 80%;
+                    height: 150px;
+                    margin: 15px 0;
                 }
 
 
@@ -79,6 +78,11 @@
                         flex-direction: column;
                         justify-content: space-between;
 
+                        @include mobile {
+                            width: 100%;
+                            height: 100%;
+                        }
+
 
                         .imgContainer {
                             width: 40px;
@@ -89,17 +93,34 @@
                             align-items: center;
                             justify-content: center;
 
+                            @include mobile {
+                                width: 20px;
+                                height: 20px;
+                            }
+
                             img {
                                 width: 25px;
+
+                                @include mobile {
+                                    width: 15px;
+                                }
                             }
                         }
 
                         h2 {
                             font-size: 20px;
+
+                            @include mobile {
+                                font-style: 13px;
+                            }
                         }
 
                         p {
                             font-size: 13px;
+
+                            @include mobile {
+                                display: none;
+                            }
                         }
 
                         span {
@@ -127,7 +148,5 @@
 
             }
         }
-
     }
-
 }
